# Elasticsearch-and-Pytest

./: Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: deploy.yml
demo/fixtures/: db_product_inventory_fixture_50.json
drf/: serializers.py  views.py
ecommerce/: settings.py  urls.py
ecommerce/tests/: inventory_fixtures.py
inventory/: admin.py
inventory/migrations/: 0001_initial.py
inventory/tests/: test_category.py
search/: documents.py  views.py
