[tool.poetry]
name = "ecommerce"
version = "0.1.0"
description = ""
authors = ["SahilMehdiyev <branchsahil@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.10.0"
djangorestframework = "^3.15.2"
django-mptt = "^0.16.0"
django-jazzmin = "^3.0.1"
pytest-django = "^4.9.0"
pillow = "^11.0.0"
attr = "^0.3.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
